src/main/java/tinys/syntactic/grammar/grammar5.txt
Los no terminales que tienen una producción con λ tienen un Opt al final, y estos métodos no se implementan directamente, ya que es suficiente utilizar el flujo que se desprende del if para representar el comportamiento de la producción con λ.
Es decir, están para facilitar la lectura de la gramática, pero no se implementan como métodos.
En grammar6.txt se elimina el uso de los no terminales con Opt, y se implementa directamente el comportamiento de la producción con λ utilizando el flujo del if.

Program ->
    DefsList Start |
    Start

DefsList ->
    Def DefsList |
    Def

Def ->
    Class |
    Impl

Start -> start MethodBlock

Class -> class idclass InheritanceOpt { AttributeRepOpt }

InheritanceOpt ->
    Inheritance |
    λ

Inheritance -> : Type

AttributeRepOpt ->
    AttributeRep |
    λ

AttributeRep ->
    Attribute AttributeRep |
    Attribute

Attribute -> VisibilityOpt Type VarsDeclList ;

VisibilityOpt ->
    Visibility |
    λ

Visibility -> pub

Impl -> impl idclass { MemberRepOpt }

MemberRepOpt ->
    MemberRep |
    λ

MemberRep ->
    Member MemberRep |
    Member

Member ->
    Method |
    Constructor

Constructor -> . FormalArgs MethodBlock

Method ->
    MethodForm fn MethodSignatureAndBody |
    fn MethodSignatureAndBody

MethodForm -> st

MethodSignatureAndBody -> MethodTypeOpt idMetAt FormalArgs MethodBlock

MethodTypeOpt ->
    MethodType |
    λ

MethodType ->
    Type |
    void

MethodBlock -> { LocalVarsDeclRepOpt SentenceRepOpt }

LocalVarsDeclRepOpt ->
    LocalVarsDeclRep |
    λ

LocalVarsDeclRep ->
    LocalVarsDecl LocalVarsDeclRep |
    LocalVarsDecl

LocalVarsDecl -> Type VarsDeclList ;

VarsDeclList -> idMetAt VarsDeclTail

VarsDeclTail ->
    , idMetAt VarsDeclTail |
    λ

FormalArgs -> ( FormalArgsListOpt )

FormalArgsListOpt ->
    FormalArgsList |
    λ

FormalArgsList -> FormalArg FormalArgsTail

FormalArgsTail ->
    , FormalArg FormalArgsTail |
    λ

FormalArg -> Type idMetAt

Type ->
    PrimitiveType |
    ReferenceType |
    ArrayType

PrimitiveType ->
    _Int |
    _Bool |
    _Str

ReferenceType -> idclass

ArrayType -> _Array PrimitiveType

SentenceRepOpt ->
    SentenceRep |
    λ

SentenceRep ->
    Sentence SentenceRep |
    Sentence

Sentence ->
    ; |
    Assignment ; |
    SimpleSentence ; |
    if ( Exp ) Sentence ElseOpt |
    while ( Exp ) Sentence |
    for ( PrimitiveType idMetAt in idMetAt ) Sentence |
    Block |
    ret RetOpt ;

ElseOpt ->
    else Sentence |
    λ

RetOpt ->
    Exp |
    λ

Block -> { SentenceRepOpt }

Assignment -> Assignable = Exp

Assignable ->
    self SelfChainOpt |
    idMetAt AssignableTail

SelfChainOpt ->
    . idMetAt SelfChainOpt |
    λ

AssignableTail ->
    . idMetAt AssignableTail |
    [ Exp ] AssignableTail |
    λ

SimpleSentence -> ( Exp )

Exp -> OrExp

OrExp -> AndExp OrExpTail

OrExpTail ->
    or AndExp OrExpTail |
    λ

AndExp -> EqExp AndExpTail

AndExpTail ->
    and EqExp AndExpTail |
    λ

EqExp -> CompoundExp EqExpTail

EqExpTail ->
    EqOp CompoundExp EqExpTail |
    λ

EqOp ->
    == |
    !=

CompoundExp -> AddExp CompoundExpTail

CompoundExpTail ->
    CompoundOp AddExp CompoundExpTail |
    λ

CompoundOp ->
    < |
    > |
    <= |
    >=

AddExp -> MultExp AddExpTail

AddExpTail ->
    AddOp MultExp AddExpTail |
    λ

AddOp ->
    + |
    -

MultExp -> UnaryExp MultExpTail

MultExpTail ->
    MultOp UnaryExp MultExpTail |
    λ

MultOp ->
    * |
    / |
    %

UnaryExp ->
    UnaryOp UnaryExp |
    Operand

UnaryOp ->
    + |
    - |
    !

Operand ->
    Literal |
    Primary

Literal ->
    intLiteral |
    true |
    false |
    _StrLiteral |
    nil

Primary ->
    BracketedExp OptionalChaining |
    self OptionalChaining |
    NewExpr |
    StaticCallOrRef |
    IdPrimary

BracketedExp -> ( Exp )

IdPrimary -> idMetAt IdPrimaryTail OptionalChaining

IdPrimaryTail ->
    CurrentArguments |
    [ Exp ] |
    λ

StaticCallOrRef -> idclass StaticCallTail OptionalChaining

StaticCallTail ->
    . idMetAt CurrentArguments |
    λ

NewExpr -> new NewTail

NewTail ->
    PrimitiveType [ Exp ] |
    idclass CurrentArguments OptionalChaining

CurrentArguments -> ( ExpsListOpt )

ExpsListOpt ->
    ExpsList |
    λ

ExpsList -> Exp ExpsTail

ExpsTail ->
    , Exp ExpsTail |
    λ

OptionalChaining ->
    . idMetAt ChainAccess OptionalChaining |
    λ

ChainAccess ->
    CurrentArguments |
    [ Exp ] |
    λ
